# histamine-fighter

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  enums.py  main.py
backend/app/agents/: base.py  composer.py  dish_lookup.py  learn.py  meal_verification.py  prompting.py  tools.py
backend/app/core/: logging.py  normalization.py  ratelimit.py  security.py  term_match.py
backend/app/db/: base.py  engine.py  mixins.py  session.py
backend/app/embeddings/: __init__.py  base.py  fastembed_embedder.py
backend/app/knowledge/: chunking.py
backend/app/llm/: anthropic_client.py  base.py  config.py  errors.py  factory.py  gemini_client.py  langchain_factory.py  mock_client.py  ollama_client.py  openai_compatible.py  providers.py  structured.py
backend/app/models/: __init__.py  admin_user.py  curated_meal.py  daily_suggestion.py  generation_settings.py  histamine_ingredient.py  knowledge_chunk.py  learn_query_cache.py  user.py
backend/app/schemas/: admin.py  meal.py  (+4 more)
backend/experiments/: README.md  ingredient_embedding_viability.py
backend/migrations/: env.py
backend/seed_data/: README.md  histamine_ingredients.json
backend/tests/: conftest.py  fakes.py  test_admin_edit_gate.py  test_admin_endpoints.py  test_admin_service.py  test_auth_endpoints.py  test_compose_endpoints.py  test_composer_agent.py  test_composer_streamer.py  test_config.py  test_daily_endpoints.py  test_daily_service.py  test_dish_lookup_agent.py  test_dish_lookup_tools.py  test_embedding_contract.py  test_embeddings.py  test_enums.py  test_factory.py  test_generate_daily_meals.py  test_generation_settings_service.py  test_histamine_endpoint.py  test_histamine_ingredient.py  test_ingredient_lookup.py  test_ingredient_service.py  test_knowledge_chunking.py  test_knowledge_service.py  test_langchain_factory.py  test_learn_agent.py  test_learn_api.py  test_learn_cache_service.py  test_llm_error_boundary.py  test_meal_retrieval_eval.py  test_meal_service.py  test_meal_verification.py  test_meals_browse.py  test_meals_endpoints.py  test_mock_client.py  test_models_registered.py  test_prompting.py  test_providers.py  (+7 more)
(+164 files in other folders)
