[project]
name = "histamine-fighter-backend"
version = "0.1.0"
description = "Histamine Fighter FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "langchain-anthropic>=1.4.4",
    "langchain-google-genai>=4.2.4",
    "langchain-ollama>=1.1.0",
    "pgvector>=0.4.2",
    "fastembed>=0.8.0",
    "slowapi>=0.1.9",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
    "sse-starlette>=3.4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "embeddings: loads the real embedding model (slow, downloads on first run)",
    "seed_eval: loads the full curated seed into Postgres (slower retrieval eval)",
]
addopts = "-m 'not embeddings and not seed_eval'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["fastembed.*", "pgvector.*"]
ignore_missing_imports = true
